// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailExplosievenGevrijwaardGebied rendering should render everything 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--pano
      "
  >
    <img
      alt="Panoramabeeld"
      className="map-detail-result__header-pano"
      src="panoUrl"
    />
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        Gevrijwaard gebied
      </h1>
      <h2
        className="map-detail-result__header-subtitle"
      >
        Gevrijwaard gebied label
      </h2>
    </div>
  </header>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultDateItem
      date={1919-12-31T00:00:00.000Z}
      label="Datum rapport"
    />
    <MapDetailResultItem
      label="Soort handeling"
      value="Gevrijwaard gebied type"
    />
    <MapDetailResultItem
      label="Bron"
      value="Gevrijwaard gebied source"
    />
    <MapDetailResultItem
      label="Opmerkingen"
      value="Gevrijwaard gebied remarks"
    />
  </ul>
</section>
`;

exports[`MapDetailExplosievenGevrijwaardGebied rendering should render without pano url 1`] = `
<section
  className="map-detail-result"
>
  <header
    className="
        map-detail-result__header
        map-detail-result__header--no-pano
      "
  >
    <div
      className="map-detail-result__header-container"
    >
      <h1
        className="map-detail-result__header-title"
      >
        Gevrijwaard gebied
      </h1>
      <h2
        className="map-detail-result__header-subtitle"
      >
        Gevrijwaard gebied label
      </h2>
    </div>
  </header>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultDateItem
      date={1919-12-31T00:00:00.000Z}
      label="Datum rapport"
    />
    <MapDetailResultItem
      label="Soort handeling"
      value="Gevrijwaard gebied type"
    />
    <MapDetailResultItem
      label="Bron"
      value="Gevrijwaard gebied source"
    />
    <MapDetailResultItem
      label="Opmerkingen"
      value="Gevrijwaard gebied remarks"
    />
  </ul>
</section>
`;
